# bob

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  deploy  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_is_approved.py  003_add_api_tokens.py  004_unique_email_globally.py  005_add_conversation_title.py  006_add_session_management_fields.py  007_add_contacts_table.py  008_add_llm_usage_log.py  009_fix_email_tenant_isolation.py
api/: dependencies.py  main.py
api/routes/: agent.py  auth.py  chat.py  email.py  rag.py  tenants.py  tokens.py
bob-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
bob-ui/src/: App.tsx  index.css  main.tsx
bob-ui/src/api/: client.ts
bob-ui/src/components/: ErrorBoundary.tsx
bob-ui/src/store/: auth.ts  (+1 more)
core/: __init__.py  config.py
core/agent/: __init__.py  orchestrator.py  tools.py
core/auth/: __init__.py  api_tokens.py  email.py  jwt.py  service.py
core/chat/: email_tools.py  web_tools.py
core/database/: __init__.py  engine.py  models.py
core/email/: gmail.py  imap_client.py  sync_task.py
core/llm/: __init__.py  base.py  bedrock.py  local.py  usage.py
core/memory/: __init__.py  context_manager.py  conversation.py
core/rag/: __init__.py  ingestion.py  pipeline.py  retriever.py
core/tenant/: __init__.py  service.py
infra/cloudformation/: bob-infra.yaml
infra/scripts/: deploy.env.example  deploy.sh
pipelines/: etl.py
pipelines/n8n/: deploy.py
tests/: __init__.py  test_agent.py  test_chat.py  test_rag.py  test_web_tools.py
(+6 files in other folders)
